--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -266,7 +266,7 @@ COSMIC                      = http://wwwdev.sanger.ac.uk/cgi-bin/genetics/CGP/di
 DBASS3                      = http://www.som.soton.ac.uk/research/geneticsdiv/dbass3/view.asp?item=gene&id=###ID###
 DBASS5                      = http://www.som.soton.ac.uk/research/geneticsdiv/dbass5/viewlist.aspx?filter=gene&id=###ID###
 DROS_ORTH                   =
-EMBL                        = http://www.ebi.ac.uk/cgi-bin/dbfetch?db=emblsva;id=###ID###
+EMBL                        = http://www.ebi.ac.uk/ena/data/view/###ID###
 ENST_IDENT                  = /###SPECIES###/Transcript/Summary?t=###ID###
 ENST_CDS                    = /###SPECIES###/Transcript/Summary?t=###ID###
 ENS_LRG_GENE                = /###SPECIES###/LRG/Summary?lrg=###ID###
