Track colour array added to style section

--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -117,6 +117,9 @@ ENSEMBL_HELP_INDEX = 0
 # To Select, use the [general]ENSEMBL_COLOURS parameter
 # Parameter values are hex RGB triples
 #
+[general]
+TRACK_COLOUR_ARRAY = [red blue green purple orange grey brown black darkred darkblue darkgreen darkgrey]
+
 [ENSEMBL_STYLE]
 # Main template colours
 
