--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -362,7 +362,7 @@ REFSEQ_DNA                  = http://www.ncbi.nlm.nih.gov/nuccore/###ID###
 REFSEQ_PEPTIDE              = http://www.ncbi.nlm.nih.gov/nuccore/###ID###
 REFSEQ_RNA                  = http://www.ncbi.nlm.nih.gov/nuccore/###ID###
 REFSEQ_GENEIMP              = http://www.ncbi.nlm.nih.gov/gene/###ID###
-RFAM                        = http://www.sanger.ac.uk/cgi-bin/Rfam/getacc?###ID###
+RFAM                        = http://rfam.sanger.ac.uk/family/###ID###
 RGD                         = http://rgd.mcw.edu/tools/query/query.cgi?id=###ID###
 RAT_GENOME_DATABASE         = http://rgd.mcw.edu/objectSearch/qtlReport.jsp?rgd_id=###ID###
 SANGER_HVER1_2_1            = http://www.sanger.ac.uk/cgi-bin/microarrays/reporter_annotation?array_id=Hver1.2.1;reporter_id=###ID###
