--- a/conf/ini-files/COLOUR.ini
+++ b/conf/ini-files/COLOUR.ini
@@ -72,7 +72,7 @@ default         = chartreuse4;label:black
 [alternative_clones]
 older_clone = brown2;label:black
 newer_clone = chartreuse3;label:black
-same_clone  = grey70;label:black
+same_clone  = 9999ff;label:black
 
 [clone]
 #there are almost certainly some unused ones here, sometime need to go through
