--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -39,8 +39,8 @@ DATABASE_DBUSER                = mysqluser    ;DB read-only user
 DATABASE_DBPASS                =              ;DB read-only password
 
 ; Blog and Twitter login details, for accessing feed
-ENSEMBL_BLOG_URL          = http://ensembl.blogspot.com
-ENSEMBL_BLOG_RSS          = http://ensembl.blogspot.com/rss.xml
+ENSEMBL_BLOG_URL          = http://www.ensembl.info
+ENSEMBL_BLOG_RSS          = http://www.ensembl.info/?feed=rss2
 ENSEMBL_TWITTER_USER      = 
 ENSEMBL_TWITTER_PASS      = 
 ENSEMBL_TWITTER_SINCE_ID  = 
