--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -85,8 +85,9 @@ ENSEMBL_SPAM_CHECK            = []
 USERDATA_FILE_FORMATS = [Generic BED bedGraph GBrowse GFF GTF PSL WIG]
 USERDATA_REMOTE_FORMATS = []
 
-$ALLOW_FTP_BAM = 0;
-$ALLOW_FTP_VCF = 0;
+$ALLOW_FTP_BAM    = 0;
+$ALLOW_FTP_BIGWIG = 0;
+$ALLOW_FTP_VCF    = 0;
 ;
 ; Display options
 ;
