--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -343,6 +343,7 @@ INTERPRO                    = http://www.ebi.ac.uk/interpro/IEntry?ac=###ID###
 IXODES_MANUALANNOTATION     = 
 IPI                         = http://srs.ebi.ac.uk/srsbin/cgi-bin/wgetz?-e+[IPI-acc:###ID###]
 JASPAR                      = http://jaspar.genereg.net/cgi-bin/jaspar_db.pl?ID=###ID###&rm=present&collection=CORE
+LRG                         = http://www.lrg-sequence.org/LRG/###ID### 
 MARKERSYMBOL                = http://www.informatics.jax.org/searches/accession_report.cgi?id=###ID###
 MEDAKA                      =
 MEDLINE                     =
