Correct values for big file FTP permissions, plus LRG xref url

--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -85,9 +85,9 @@ ENSEMBL_SPAM_CHECK            = []
 USERDATA_FILE_FORMATS = [Generic BED bedGraph GBrowse GFF GTF PSL WIG]
 USERDATA_REMOTE_FORMATS = []
 
-$ALLOW_FTP_BAM    = 0;
-$ALLOW_FTP_BIGWIG = 0;
-$ALLOW_FTP_VCF    = 0;
+ALLOW_FTP_BAM    = 0
+ALLOW_FTP_BIGWIG = 0
+ALLOW_FTP_VCF    = 0
 ;
 ; Display options
 ;
@@ -286,6 +286,7 @@ EMBL                        = http://www.ebi.ac.uk/ena/data/view/###ID###
 ENST_IDENT                  = /###SPECIES###/Transcript/Summary?t=###ID###
 ENST_CDS                    = /###SPECIES###/Transcript/Summary?t=###ID###
 ENS_LRG_GENE                = /###SPECIES###/LRG/Summary?lrg=###ID###
+ENS_LRG_SEQUENCE            = http://www.lrg-sequence.org/LRG/LRG_###ID###
 ENS_CF_GENE                 = http://www.ensembl.org/Canis_familiaris/Gene/Summary?g=###ID###
 ENS_CF_TRANSCRIPT           = http://www.ensembl.org/Canis_familiaris/Transcript/Summary?t=###ID###
 ENS_CF_TRANSLATION          = http://www.ensembl.org/Canis_familiaris/Transcript/ProteinSummary?peptide=###ID###
