new ciona links

--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -270,8 +270,8 @@ CCDS                        = http://www.ncbi.nlm.nih.gov/CCDS/CcdsBrowse.cgi?RE
 CELERA_GENE                 =
 CELERA_PEP                  =
 CELERA_TRANS                =
-CINT_ANISEED_V1             = http://crfb.univ-mrs.fr/aniseed/molecule-gene.php?name=###ID###
-CINT_ANISEED_V2             = http://crfb.univ-mrs.fr/aniseed/molecule-gene.php?name=###ID###
+CINT_ANISEED_V1             = http://aniseed-ibdm.univ-mrs.fr/molecule-gene.php?name=###ID###
+CINT_ANISEED_V2             = http://aniseed-ibdm.univ-mrs.fr/molecule-gene.php?name=###ID###
 CINT_JGI_V1                 = http://genome.jgi-psf.org/cgi-bin/dispGeneModel?db=ciona4;id=###ID###
 CINT_JGI_V2                 = http://genome.jgi-psf.org/cgi-bin/dispGeneModel?db=Cioin2;id=###ID###
 CODELINK                    =
