--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -392,6 +392,7 @@ TREEFAMTREE                 = http://www.treefam.org/cgi-bin/TFinfo.pl?ac=###ID#
 GENOMICUSSYNTENY               = http://www.dyogen.ens.fr/lcgi-bin/search.pl?query=###ID###
 PHYLOMEDB                   = http://phylomedb.org/?seqid=###ID###
 UNIGENE                     = http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?db=unigene&term=###ID###
+UNIPROT_GENENAME            = http://www.uniprot.org/uniprot/###ID###
 UNIPROT/SPTREMBL            = http://www.uniprot.org/uniprot/?query=###ID###&sort=score
 UNIPROT/SWISSPROT           = http://www.uniprot.org/uniprot/?query=###ID###&sort=score
 UNIPROTKB/SWISS-PROT        = http://www.uniprot.org/uniprot/?query=###ID###&sort=score
