--- a/conf/_httpd_2-2_EC2.conf
+++ b/conf/_httpd_2-2_EC2.conf
@@ -90,7 +90,6 @@ RewriteRule /img/blastview/(.*) http://www.ensembl.org/img/blastview/$1?redirect
 RewriteRule /(.*)/blastview http://www.ensembl.org/$1/blastview [P] 
 RewriteCond "%{HTTP_REFERER}" "/.*BLAST.*"
 RewriteRule /(.*) http://www.ensembl.org/$1 [P] 
-
 # post helpdesk form back to hinxton
 RewriteCond "%{HTTP_REFERER}" "/Help/Preview"
 RewriteRule /(.*) http://www.ensembl.org/$1 [P] 
@@ -419,9 +418,12 @@ DefaultType             text/plain
 HostnameLookups         Off
 
 LogLevel                warn
-LogFormat               "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-LogFormat               "[%P/%{ENSEMBL_CHILD_COUNT}e %{ENSEMBL_SCRIPT_TIME}e %{outstream}n/%{instream}n=%{ratio}n] %h/%{HTTP_X_FORWARDED_FOR}e %l/%{ENSEMBL_SESSION_ID}e %u/%{ENSEMBL_USER_ID}e %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" \"%{HTTP_X_Requested_With}e\" %{ENSEMBL_SCRIPT_START}e/%{ENSEMBL_SCRIPT_END}e" ensembl_extended
 
+#this for development
+#LogFormat               "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+#LogFormat               "[%P/%{ENSEMBL_CHILD_COUNT}e %{ENSEMBL_SCRIPT_TIME}e %{outstream}n/%{instream}n=%{ratio}n] %h/%{HTTP_X_FORWARDED_FOR}e %l/%{ENSEMBL_SESSION_ID}e %u/%{ENSEMBL_USER_ID}e %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" \"%{HTTP_X_Requested_With}e\" %{ENSEMBL_SCRIPT_START}e/%{ENSEMBL_SCRIPT_END}e" ensembl_extended
+#this for live
+LogFormat ":%{X-Forwarded-For}i %v %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" \"%{Cookie}i\"" urchin_xforwarded
 
 ServerSignature         Off
 
