colouring for devil RNASeq genes

--- a/conf/ini-files/COLOUR.ini
+++ b/conf/ini-files/COLOUR.ini
@@ -189,6 +189,7 @@ refseq_human_import                      = darkblue        Human RefSeq import
 refseq_mouse_import                      = darkblue        Mouse RefSeq import
 zfish_rnaseq                             = darkblue        RNASeq gene
 gorilla_rnaseq                           = darkblue        RNASeq gene
+devil_rnaseq                             = darkblue        RNASeq gene
 human_rnaseq                             = darkblue        RNASeq gene
 lrg_import                               = #8080ff         LRG gene
 
