--- a/conf/ini-files/COLOUR.ini
+++ b/conf/ini-files/COLOUR.ini
@@ -34,7 +34,7 @@ col_ctgs2       = darkgreen
 
 ## DNA and protein align features etc...
 [feature]
-default         = blue;join:cadetblue1
+default         = blue;join:cadetblue1; 
 cdna            = chartreuse3;join:darkolivegreen1
 protein         = gold;join:lightgoldenrod1
 est             = purple2;join:mediumpurple1
@@ -47,6 +47,7 @@ oligo           = darkgreen;join:palegreen
 blast           = red;join:pink
 tmp_file        = grey25;join:grey70
 url             = red;join:pink
+reference       = blue;border:grey70
 
 #for supporting evidence view
 non_can_intron  = red
