Create the two new URLs RGD_SEARCH and ZFIN_SEARCH

--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -411,7 +411,7 @@ OXFORD_FGU_OA_TSCRIPT       = http://genserv.anat.ox.ac.uk/cgi-bin/gbrowse_detai
 PAHDB                       = http://www.pahdb.mcgill.ca/PahdbSearch.php?SearchValue=###ID###&SearchField=mut_name&SearchOrderedField=id_mut&SearchAscDesc=ASC&Submit=Submit&MenuSelection=Mutation
 PDB                         = http://www.ebi.ac.uk/pdbe-srv/view/entry/###ID###/summary.html
 PHENCODE                    = http://phencode.bx.psu.edu/cgi-bin/phencode/phencode?build=hg19&id=###ID### 
-PLATYPUS_OLFACTORY_RECEPTOR =  http://genome.weizmann.ac.il/horde/organism/card/symbol:###ID###
+PLATYPUS_OLFACTORY_RECEPTOR = http://genome.weizmann.ac.il/horde/organism/card/symbol:###ID###
 PREDICTION_SPTREMBL         = http://www.ebi.uniprot.org/entry/###ID###
 PROTEIN_ID                  = http://www.ncbi.nlm.nih.gov/protein/###ID###
 PUBMED                      = http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=###ID###
@@ -431,6 +431,7 @@ REFSEQ_GENEIMP              = http://www.ncbi.nlm.nih.gov/gene/###ID###
 REFSEQ_PROTIMP              = http://www.ncbi.nlm.nih.gov/protein/###ID###
 RFAM                        = http://rfam.xfam.org/family/###ID###
 RGD                         = http://rgd.mcw.edu/rgdweb/report/gene/main.html?id=###ID###
+RGD_SEARCH                  = http://rgd.mcw.edu/rgdweb/report/reference/main.html?id=###ID###
 RAT_GENOME_DATABASE         = http://rgd.mcw.edu/objectSearch/qtlReport.jsp?rgd_id=###ID###
 RNACENTRAL                  = http://rnacentral.org/rna/###ID###
 SANGER_HVER1_2_1            = http://www.sanger.ac.uk/cgi-bin/microarrays/reporter_annotation?array_id=Hver1.2.1;reporter_id=###ID###
@@ -627,5 +628,6 @@ WTCGR_HOME               = http://www.well.ox.ac.uk/
 WZ                       = http://fisher.wustl.edu/fish_lab/cgi-bin/display.cgi?type=wz;value=###ID###
 ZFIN_AC                  = http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=###ID###
 ZFIN                     = http://zfin.org/cgi-bin/webdriver?MIval=aa-markerview.apg&OID=###ID###
+ZFIN_SEARCH              = http://zfin.org/search?q=###ID###&category=Phenotype
 ZPICTURE                 = http://zpicture.dcode.org/
 EXPRESSION_PATTERN       = http://zfin.org/cgi-bin/webdriver?MIval=aa-xpatselect.apg&query_results=true&xpatsel_geneZdbId=###ID###
