Improve visibility of rna tracks

--- a/conf/ini-files/COLOUR.ini
+++ b/conf/ini-files/COLOUR.ini
@@ -42,7 +42,7 @@ default         = blue;join:cadetblue1
 cdna            = chartreuse3;join:darkolivegreen1
 protein         = gold;join:lightgoldenrod1
 est             = purple2;join:mediumpurple1
-rna             = hotpink2;join:pink
+rna             = royalblue4;join:blue
 exon_support    = cadetblue3;join:cadetblue1
 intron_support  = cadetblue4
 intron_support_non_can  = red
