--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -1,10 +1,10 @@
 ######################################################################
-#   
+#
 #   Name:           DEFAULTS.ini
-#   
+#
 #   Description:    Default parameters/parameter values for Ensembl ini files
 #                   Parameters defined here are copied into the SpeciesDefs
-#                   configuration data structure in locations corresponding 
+#                   configuration data structure in locations corresponding
 #                   to _empty_ sections of each <species>.ini file.
 #
 ######################################################################
@@ -29,12 +29,12 @@ ENSEMBL_REGISTRY_LOCATION     = xxxxxx
 ENSEMBL_DEFAULT_SEARCHCODE    = ensembl
 
 ENSEMBL_REST_URL              = http://rest.ensembl.org
-TRACKHUB_REGISTRY_URL         = https://www.trackhubregistry.org 
+TRACKHUB_REGISTRY_URL         = https://www.trackhubregistry.org
 
 ENSEMBL_JAVA                  = java
 
 ; Database connection settings.
-; For database-specific overrides, see the [databases] section  
+; For database-specific overrides, see the [databases] section
 ;
 
 DATABASE_HOST                  = mysql.mydomain.org; DB server hostname/IP address
@@ -65,7 +65,7 @@ ENSEMBL_PFETCH_TRACE_SERVER   = pfetch.mydomain.org
 ;
 ; Web services (Used for DAS etc)
 ;
-ENSEMBL_WWW_PROXY             = 
+ENSEMBL_WWW_PROXY             =
 ENSEMBL_NO_PROXY              = [ ]
 ENSEMBL_DAS_SERVERS           = [das.sanger.ac.uk]
 ENSEMBL_DAS_TIMEOUT              = 5
@@ -84,15 +84,15 @@ ALLOW_FTP_VCF    = 0
 ; Now only configured in conf/SiteDefs.pm
 
 ; Images for HTML page headers
-AUTHORITY                       = Ensembl 
+AUTHORITY                       = Ensembl
 
 ; Switch for default hiding / displaying of help index
-ENSEMBL_HELP_INDEX = 0                  
+ENSEMBL_HELP_INDEX = 0
 
 ######################################################################
-# DATABASE SETTINGS 
+# DATABASE SETTINGS
 # Each Parameter value refers to the name of a MySQL database
-# ParameterNames can be used to create subsections whose parameters override 
+# ParameterNames can be used to create subsections whose parameters override
 # the defaults in the [general] section
 #
 #  DatabaseName = mysql_database_name
@@ -107,7 +107,7 @@ ENSEMBL_HELP_INDEX = 0
 
 
 #####################################################################
-# COLOUR PALETTE. 
+# COLOUR PALETTE.
 # To Select, use the [general]ENSEMBL_COLOURS parameter
 # Parameter values are hex RGB triples
 #
@@ -117,7 +117,7 @@ TRACK_COLOUR_ARRAY = [red blue green purple orange grey brown black darkred dark
 [ENSEMBL_STYLE]
 # Main template colours
 
-# General 
+# General
 PAGE_BG          = ffffff
 PAGE_TEXT        = 555555
 PAGE_HEADER      = 333333
@@ -141,11 +141,11 @@ SITE_LOGO_ALT    = Ensembl Home
 SITE_LOGO_WIDTH  = 185
 SITE_LOGO_HEIGHT = 45
 SITE_LOGO_HREF   = /
-SITE_LOGO_COLOUR = 5588dd 
+SITE_LOGO_COLOUR = 5588dd
 PRINT_LOGO       = e-ensembl_print.gif
 MIRROR_ICON      = globe_sm.gif
 MOBILE_LOGO         = e-mobile.png
-MOBILE_LOGO_WIDTH   = 50 
+MOBILE_LOGO_WIDTH   = 50
 MOBILE_LOGO_HEIGHT  = 45
 
 # Extras
@@ -167,7 +167,7 @@ BUTTON_DISABLED_HOVER = 777777
 BUTTON_GROUP_BG  = cccccc
 BUTTON_ON        = B0BBD8
 TABLE_HEADER     = 8b9bc1
-MENU_LINK        = 336699 
+MENU_LINK        = 336699
 CONFIG_HOVER     = cfd4e7
 INFO_BG          = cccccc
 ERROR_BG         = aa5555
@@ -243,10 +243,10 @@ GRAPHIC_SMALL	      = 0.8 ; Relative font-size for small text
 # ExtIndex CONFIGURATION
 #
 [ENSEMBL_EXTERNAL_INDEXERS]
-PFETCH          = 
-EFETCH          = 
+PFETCH          =
+EFETCH          =
 SRS             =
-NULL            = 
+NULL            =
 
 [ENSEMBL_EXTERNAL_DATABASES]
 EMBL       = NULL
@@ -269,13 +269,13 @@ Translation       = Peptide
 
 ######################################################################
 # URL TEMPLATES FOR HYPERLINKS
-# Used by the ExtURL module 
+# Used by the ExtURL module
 #
 [ENSEMBL_EXTERNAL_URLS]
 
 ## Used by more than one group
 EPMC_MED                    = http://europepmc.org/abstract/MED/###ID###
-LRG                         = http://www.lrg-sequence.org/LRG/###ID### 
+LRG                         = http://www.lrg-sequence.org/LRG/###ID###
 MIM                         = http://www.omim.org/###ID###
 MIM_GENE                    = http://www.omim.org/###ID###
 MIM_MORBID                  = http://www.omim.org/###ID###
@@ -332,7 +332,7 @@ MGI                         = http://www.informatics.jax.org/marker/###ID###
 MIRBASE                     = http://www.mirbase.org/cgi-bin/mirna_entry.pl?id=###ID###
 OTTG                        = http://vega.sanger.ac.uk/###SPECIES###/Gene/Summary?g=###ID###
 OTTT                        = http://vega.sanger.ac.uk/###SPECIES###/Transcript/Summary?t=###ID###
-OTTP                        = http://vega.sanger.ac.uk/###SPECIES###/Transcript/ProteinSummary?peptide=###ID###	
+OTTP                        = http://vega.sanger.ac.uk/###SPECIES###/Transcript/ProteinSummary?peptide=###ID###
 PDB                         = http://www.ebi.ac.uk/pdbe-srv/view/entry/###ID###/summary.html
 PROTEIN_ID                  = http://www.ncbi.nlm.nih.gov/protein/###ID###
 PUBMED                      = http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&dopt=Abstract&list_uids=###ID###
@@ -370,7 +370,7 @@ ZFIN_XPAT                   = http://zfin.org/cgi-bin/webdriver?MIval=aa-xpatsel
 
 ## Variation only
 1KG_POP                     = http://www.1000genomes.org/faq/which-populations-are-part-your-study
-AMDGC                       = http://www.sph.umich.edu/csg/abecasis/public/amdgene2012/ 
+AMDGC                       = http://www.sph.umich.edu/csg/abecasis/public/amdgene2012/
 ANIMAL_QTLDB                = http://www.animalgenome.org/cgi-bin/QTLdb/###SP###/qdetails?QTL_ID=###ID###
 CANCER_GENE_CENSUS          = http://cancer.sanger.ac.uk/census
 CLIN_SIG                    = http://www.ncbi.nlm.nih.gov/clinvar/docs/clinsig/
@@ -380,7 +380,7 @@ COSMIC_STUDY                = http://cancer.sanger.ac.uk/cosmic/browse/tissue?#s
 COSMIC_SV                   = http://cancer.sanger.ac.uk/cosmic/rearrangement/overview?id=###ID###
 DBGAP                       = http://www.ncbi.nlm.nih.gov/projects/gapplusprev/sgap_plus.htm
 DBSNP                       = http://www.ncbi.nlm.nih.gov/SNP/snp_ref.cgi?rs=###ID###
-DBSNP_HOME                  = http://www.ncbi.nlm.nih.gov/snp 
+DBSNP_HOME                  = http://www.ncbi.nlm.nih.gov/snp
 DBSNPPOP                    = http://www.ncbi.nlm.nih.gov/SNP/snp_viewTable.cgi?pop=###ID###
 DBSNPSS                     = http://www.ncbi.nlm.nih.gov/SNP/snp_ss.cgi?subsnp_id=###ID###
 DBSNPSSID                   = http://www.ncbi.nlm.nih.gov/projects/SNP/snp_viewTable.cgi?handle=###ID###
@@ -389,14 +389,14 @@ DECIPHER                    = https://decipher.sanger.ac.uk/patient/###ID###
 DGVA                        = http://www.ebi.ac.uk/dgva/
 EGA_SEARCH                  = http://www.ebi.ac.uk/ebisearch/search.ebi?db=ega&query=###ID###
 ESP                         = http://evs.gs.washington.edu/EVS/PopStatsServlet?searchBy=chromosome&chromosome=###CHR###&chromoStart=###START###&chromoEnd=###END###
-ESP_HOME                    = http://evs.gs.washington.edu/EVS/ 
-GEFOS                       = http://www.gefos.org 
+ESP_HOME                    = http://evs.gs.washington.edu/EVS/
+GEFOS                       = http://www.gefos.org
 GIANT                       = http://www.broadinstitute.org/collaboration/giant/index.php/Main_Page
 HAPMAP                      = http://www.hapmap.org/cgi-perl/secure/gbrowse/snp_details/hapmap?class=SNP;name=###ID###
-HBVAR                       = http://globin.bx.psu.edu/cgi-bin/hbvar/query_vars3?mode=output&display_format=page&i=###ID### 
+HBVAR                       = http://globin.bx.psu.edu/cgi-bin/hbvar/query_vars3?mode=output&display_format=page&i=###ID###
 HGMD-PUBLIC                 = http://www.hgmd.cf.ac.uk/ac/index.php
-IIBDGC                      = http://www.ibdgenetics.org/  
-INFEVERS                    = http://fmf.igh.cnrs.fr/ISSAID/infevers/detail_mutation.php?Id_mutation=###ID### 
+IIBDGC                      = http://www.ibdgenetics.org/
+INFEVERS                    = http://fmf.igh.cnrs.fr/ISSAID/infevers/detail_mutation.php?Id_mutation=###ID###
 KAT6BDB                     = http://www.lovd.nl/###ID###
 LMDD                        = http://www.lovd.nl/###ID###
 LOVD                        = http://varcache.lovd.nl/redirect/hg19.chr###ID###
@@ -407,12 +407,13 @@ OMIA                        = http://omia.angis.org.au/###ID###/###TAX###/
 OMIM                        = http://www.omim.org/###ID###
 ORPHANET                    = http://www.orpha.net/consor/cgi-bin/OC_Exp.php?lng=en&Expert=###ID###
 PAHDB                       = http://www.pahdb.mcgill.ca/PahdbSearch.php?SearchValue=###ID###&SearchField=mut_name&SearchOrderedField=id_mut&SearchAscDesc=ASC&Submit=Submit&MenuSelection=Mutation
-PHENCODE                    = http://phencode.bx.psu.edu/cgi-bin/phencode/phencode?build=hg19&id=###ID### 
+PHENCODE                    = http://phencode.bx.psu.edu/cgi-bin/phencode/phencode?build=hg19&id=###ID###
 QUICK_GO_IMP                = http://www.ebi.ac.uk/QuickGO/GAnnotation?goid=###ID###&evidence=IMP&protein=###PR_ID###
 RGD_SEARCH                  = http://rgd.mcw.edu/rgdweb/report/reference/main.html?id=###ID###
 TESLOVICH                   = http://www.sph.umich.edu/csg/abecasis/public/lipids2010
 UNIPROT_SEARCH              = http://www.uniprot.org/uniprot/?query=###ID###
 UNIPROT_VARIATION           = http://web.expasy.org/variant_pages/###ID###.html
+SNPEDIA                     = http://snpedia.com
 
 ## Possibly variation
 AFFYMETRIX                  = http://www.affymetrix.com/
@@ -501,7 +502,7 @@ IMCB_HOME                = http://www.imcb.a-star.edu.sg/research/research_group
 IMGT                        =
 IMGT/LIGM_DB                = http://srs.ebi.ac.uk/srsbin/cgi-bin/wgetz?-e+[IMGTLIGM:###ID###]
 #INTERPRO                    = http://www.ebi.ac.uk/interpro/ISearch?query=###ID###
-IXODES_MANUALANNOTATION     = 
+IXODES_MANUALANNOTATION     =
 JAMBOREE                 = http://www.sanger.ac.uk/cgi-bin/Projects/X_tropicalis/search_cDNA_by_symbol_or_keyword.pl?source=all&symbol_clone_alias_key=gene+name&search=###ID###
 LOCUSLINK                = http://www.ncbi.nlm.nih.gov/LocusLink/LocRpt.cgi?l=###ID###
 MARKERSYMBOL                = http://www.informatics.jax.org/searches/accession_report.cgi?id=###ID###
